@@ -1,3 +1,12 @@
+2025-10-05T00:58:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18251774566 # 787
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-05
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 196 263 / 200 267
+* notice: next accum: outdated-unq outdated-all / unq all: 197 264 / 200 267
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-09-20] / []
+
 2025-10-04T00:49:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18237159772 # 786
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
